<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Contenido principal centrado -->
    <LinearLayout
        android:id="@+id/loginContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="24dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/logo_text"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/te_da_la_bienvenida"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:importantForAccessibility="no"
            android:focusable="false" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="#2196F3"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#050505"
            android:textSize="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="#1976D2"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="#050505"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:backgroundTint="#CFCFD0"
            android:text="@string/ingresar"
            android:textColor="#2196F3" />


        <TextView
            android:id="@+id/loginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:gravity="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:indeterminate="true" />

    </LinearLayout>

    <!-- Botón de regreso en la esquina inferior izquierda -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back" />
</RelativeLayout>
